--- a/client/HTML/AdminInventoryDashboard.html
+++ b/client/HTML/AdminInventoryDashboard.html
@@ -87,7 +87,7 @@
         </ul>
       </div>
       <div class="btn-group">
-        <button class="btn btn-secondary btn-lg" style="background-color: green" data-bs-toggle="dropdown" aria-expanded="false">
+        <button class="btn btn-secondary btn-lg" style="background-color: blue" data-bs-toggle="dropdown" aria-expanded="false">
           Filter By Region
         </button>
         <ul class="dropdown-menu" aria-labelledby="regionDropdownMenuButton">
@@ -99,8 +99,8 @@
           </ul>
         </ul>
       </div>
-      <button class="btn btn-secondary btn-lg" style="background-color: red" onclick="ClearFilters()">Clear Filters</button>
-      <button class="btn btn-danger" onclick="populateDeletedItemsTable(deletedItems)">View Deleted Products</button>
+      <button class="btn btn-secondary btn-lg" style="background-color: gray;" onclick="populateDeletedItemsTable(deletedItems)">View Deleted Products</button>
+      <button class="btn btn-secondary btn-lg" style="background-color: gray" onclick="ClearFilters()">Reset Filters</button>
     </div>
   </div>
   <!-- End Filter Buttons Row -->
@@ -108,7 +108,7 @@
   <!-- Add New Button Row -->
   <div class="row mt-2">
     <div class="col-md-12 text-end">
-      <a href="./AddNewStocks.html" class="btn btn-primary">+ Add New</a>
+      <a href="./AddNewStocks.html" class="btn btn-secondary btn-lg" style="background-color: green;">+ Add New</a>
     </div>
   </div>
   <!-- End Add New Button Row -->
