--- a/client/HTML/AboutUs.html
+++ b/client/HTML/AboutUs.html
@@ -32,8 +32,8 @@
     <!-- About Us Content -->
     <div class="container mt-4 bg-light p-4 rounded shadow">
         <h1>About Us</h1>
-        <p>Insert About Us text here</p>
-    </div>
+        <p>
+          Welcome to TTV Vending, where we blend technology, taste, and value to redefine your vending experience! Our mission at TTV Vending is to revolutionize the way you snack by providing innovative solutions that prioritize your satisfaction and align with our commitment to sustainability.
 
     <!-- Include Bootstrap JS if needed -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
